[package]
name = "rusty_hausdorff"
version = "0.1.0"
authors = ["Tyler Reddy <tyler.je.reddy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.2"
ndarray-npy = "0.8"
rand = "0.8.4"
rand_chacha = "0.3.1"
