[package]
name = "rusty_hausdorff"
version = "0.2.0"
authors = ["Tyler Reddy <tyler.je.reddy@gmail.com>"]
edition = "2018"
description = "A parallel implementation of the directed Hausdorff distance."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tylerjereddy/rusty_hausdorff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.2"
ndarray-npy = "0.8"
rand = "0.8.4"
rand_chacha = "0.3.1"
